--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -291,23 +291,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'folium'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-173c1173bf1c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mfolium\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'folium'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The following command must be run outside of the IPython shell:\n",
+      "\n",
+      "    $ pip install -r requirements.txt\n",
+      "\n",
+      "The Python package manager (pip) can only be used from outside of IPython.\n",
+      "Please reissue the `pip` command in a separate terminal or command prompt.\n",
+      "\n",
+      "See the Python documentation for more information on how to install packages:\n",
+      "\n",
+      "    https://docs.python.org/3/installing/\n"
      ]
     }
    ],
    "source": [
-    "import folium"
+    "pip install -r requirements.txt\n"
    ]
   },
   {
