--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,23 +263,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1000"
+       "{'pickup_latitude': '40.64499',\n",
+       " 'pickup_longitude': '-73.781149999999997',\n",
+       " 'trip_distance': '18.379999999999999'}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cleaned_trips = float_values(parsed_trips)\n",
-    "len(parsed_trips)"
+    "len(parsed_trips)\n",
+    "parsed_trips[0][0]"
    ]
   },
   {
