automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -263,18 +263,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'pickup_latitude': '40.64499',\n",
-       " 'pickup_longitude': '-73.781149999999997',\n",
-       " 'trip_distance': '18.379999999999999'}"
+       "'40.64499'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +280,7 @@
    "source": [
     "cleaned_trips = float_values(parsed_trips)\n",
     "len(parsed_trips)\n",
-    "parsed_trips[0][0]"
+    "parsed_trips[0]['pickup_latitude']"
    ]
   },
   {
