automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -263,23 +263,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-27-c0e714394e0c>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-27-c0e714394e0c>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    len cleaned_trips\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'trip_distance': 18.38}"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "cleaned_trips = float_values(parsed_trips)\n",
     "len(parsed_trips)\n",
-    "len( )cleaned_trips)\n",
-    "type(parsed_trips[0]['pickup_latitude'])"
+    "len(cleaned_trips)\n",
+    "cleaned_trips[0]"
    ]
   },
   {
