--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -253,18 +253,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'pickup_latitude': '40.64499',\n",
-       " 'pickup_longitude': '-73.781149999999997',\n",
-       " 'trip_distance': '18.379999999999999'}"
+       "[{'pickup_latitude': '40.64499',\n",
+       "  'pickup_longitude': '-73.781149999999997',\n",
+       "  'trip_distance': '18.379999999999999'},\n",
+       " {'pickup_latitude': '40.766931',\n",
+       "  'pickup_longitude': '-73.982097999999993',\n",
+       "  'trip_distance': '1.3'},\n",
+       " {'pickup_latitude': '40.777729999999998',\n",
+       "  'pickup_longitude': '-73.951902000000004',\n",
+       "  'trip_distance': '4.5'},\n",
+       " {'pickup_latitude': '40.795678000000002',\n",
+       "  'pickup_longitude': '-73.971048999999994',\n",
+       "  'trip_distance': '2.3999999999999999'},\n",
+       " {'pickup_latitude': '40.762912',\n",
+       "  'pickup_longitude': '-73.967782',\n",
+       "  'trip_distance': '0.83999999999999997'}]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +285,7 @@
     "cleaned_trips = float_values(parsed_trips)\n",
     "len(parsed_trips)\n",
     "len(cleaned_trips)\n",
-    "cleaned_trips[0]"
+    "type(cleaned_trips[0]['pickup_latitude']"
    ]
   },
   {
