--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,37 +246,23 @@
     "    for trip in trips:\n",
     "        tempdict = {}\n",
     "        for value in trip:\n",
-    "            tempdict[value] = trip[value]\n",
+    "            tempdict[value] = float(trip[value])\n",
     "        out.append(tempdict)\n",
     "    return out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'pickup_latitude': '40.64499',\n",
-       "  'pickup_longitude': '-73.781149999999997',\n",
-       "  'trip_distance': '18.379999999999999'},\n",
-       " {'pickup_latitude': '40.766931',\n",
-       "  'pickup_longitude': '-73.982097999999993',\n",
-       "  'trip_distance': '1.3'},\n",
-       " {'pickup_latitude': '40.777729999999998',\n",
-       "  'pickup_longitude': '-73.951902000000004',\n",
-       "  'trip_distance': '4.5'},\n",
-       " {'pickup_latitude': '40.795678000000002',\n",
-       "  'pickup_longitude': '-73.971048999999994',\n",
-       "  'trip_distance': '2.3999999999999999'},\n",
-       " {'pickup_latitude': '40.762912',\n",
-       "  'pickup_longitude': '-73.967782',\n",
-       "  'trip_distance': '0.83999999999999997'}]"
+       "float"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +271,7 @@
     "cleaned_trips = float_values(parsed_trips)\n",
     "len(parsed_trips)\n",
     "len(cleaned_trips)\n",
-    "type(cleaned_trips[0]['pickup_latitude']"
+    "type(cleaned_trips[0]['pickup_latitude'])"
    ]
   },
   {
