--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -310,16 +310,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'trip_distance': 18.38}"
+       "{'pickup_latitude': 40.64499,\n",
+       " 'pickup_longitude': -73.78115,\n",
+       " 'trip_distance': 18.38}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,17 +344,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "import folium\n",
+    "\n",
     "manhattan_map = folium.Map(location=[40.7589, -73.9851], zoom_start=11)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'manhattan_map' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-43-251eeddb5387>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmanhattan_map\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'manhattan_map' is not defined"
+     ]
+    }
+   ],
    "source": [
     "manhattan_map"
    ]
